# fetched

./: Cargo.toml  install.sh  readme.md  theme.toml
.github/: FUNDING.yml
docs/: notes.md  request-model.json  todo.md
docs/webhookpayloads/: bitbucket.json  github-push.json
examples/: script.yaml
src/: constants.rs  lib.rs  main.rs
src/api/: handlers.rs  routes.rs  server.rs
src/components/: manager.rs  mod.rs  structs.rs
src/components/drawable/: editheader.rs  footer.rs  header.rs  mod.rs
src/components/events/: enter.rs
src/components/widget_contents/: auth.rs  body.rs  header.rs  mod.rs  query.rs  response_body.rs  response_header.rs
src/components/widgets/: request.rs  response.rs
src/core/: app.rs  enums.rs  handler.rs  helpers.rs  mod.rs  request_parser.rs  runner.rs  theme.rs
src/io/: file_create.rs  mod.rs
src/utils/: config_parser.rs  logging.rs  webhook_payload_parser.rs
test/: create  sample
