[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bytes = "1.7.1"
parking_lot = "0.12.3"
queues = "1.1.0"
serde = "1.0.204"
serde_derive = "1.0.205"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
warp = "0.3.7"
