[package]
author = 'n3tw0rth'
name = "postman-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.91"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "5.0.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.214", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
toml = "0.8.19"
